--- a/Web基础知识学习/02-CSS学习笔记/Codes/学成网案例/index.html
+++ b/Web基础知识学习/02-CSS学习笔记/Codes/学成网案例/index.html
@@ -119,6 +119,7 @@
         .banner-in {
             height: 420px;
             background: url(./images/banner_03.png) 0 0 no-repeat;
+            position: relative;
         }
 
         .sliderbar {
@@ -231,6 +232,129 @@
             float: right;
             font-size: 14px;
         }
+
+        .cirle {
+            width: 180px;
+            height: 22px;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            margin-left: -90px;
+        }
+        
+        .cirle > li {
+            float: left;
+            width: 12px;
+            height: 12px;
+            background-color: rgba(255,255,255,0.4);
+            margin: 6px 8px;
+            border-radius: 50%;
+        }
+
+        .cirle > li:first-child {
+            background-color: #fff;
+            width: 19px;
+            border-radius: 19px;
+        }
+
+        .recom-product {
+            margin-top: 35px;
+        }
+        .recom-hd {
+            height: 40px;
+        }
+        .recom-hd h4 {
+            float: left;
+            color: #494949;
+        }
+        .recom-hd a {
+            float: right;
+            margin-top: 10px;
+            font-size: 14px;
+            color: #a5a5a5;
+            margin-right: 30px;
+        }
+        .recom-hd a:hover {
+            color: #004aff;
+        }
+        .recom-bd ul li{    
+            width: 228px;
+            height: 270px;
+            background-color: #fff;
+            overflow: hidden;
+            box-shadow: 0 4px 5px rgba(0,0,0,0.2);
+            float: left;
+            margin-right: 15px;
+            margin-top: 15px;
+        }
+        .recom-bd ul li:nth-child(5n){
+            margin-right: 0;
+        }
+
+        .recom-bd li h4,
+        .recom-bd li p {
+            margin: 12px 20px 0 24px;
+            margin-top: 12px;
+        }
+        .recom-bd li h4 {
+            line-height: 22px;
+            font-size: 14px;
+            font-weight: normal;
+        }
+        .recom-bd li p {
+            font-size: 12px;
+            color: #999;
+        }
+        .recom-bd li p span {
+            color: #ff7c2d;
+        }
+        .footer {
+            height: 270px;
+            background-color: #fff;
+            margin-top: 100px;
+        }
+        .footer-in {
+            padding-top: 30px;
+        }
+        .footer-l {
+            float: left;
+        }
+        .footer-l p {
+            font-size: 12px;
+            line-height: 18px;
+            color: #999;
+            margin-top: 20px;
+        }
+        .footer-l a {
+            display: block;
+            width: 118px;
+            height: 33px;
+            border: 1px solid #00a4ff;
+            font-size: 16px;
+            color: #00a4ff;
+            text-align: center;
+            line-height: 33px;
+            margin-top: 15px;
+        }
+        .footer-r {
+            float: right;
+            color: #333;
+        }
+        .footer-r dl {
+            float: left;
+            width: 225px;
+        }
+        .footer-r dt {
+            font-size: 16px;
+        }
+        .footer-r dd {
+            font-size: 12px;
+            height: 20px;
+        }
+        .footer-r dd a:hover {
+            color: #00a4ff;
+            text-decoration: underline; /*  添加下划线 */
+        }
     </style>
 </head>
 <body>
@@ -294,9 +418,16 @@
                     <a href="#">全部课程</a>
                 </dd>
             </dl>
+            <ul class="cirle">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
     </div>
-
     <div class="recommend container"> <!-- 精品推荐 -->
         <a href="#">精品推荐</a>
         <a href="#">Jquery</a>
@@ -307,5 +438,110 @@
         <a href="#">javaWeb</a>
         <a href="#">修改兴趣</a>
     </div>
+    <div class="recom-product container">
+        <div class="recom-hd">
+            <h4>精品推荐</h4>
+            <a href="#">查看全部</a>
+        </div>
+        <div class="recom-bd clearfix">
+            <ul>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+                <li>
+                    <img src="./images/icon1.png" alt="">
+                    <h4>Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <p><span>高级</span> 1125人在学习</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container footer-in">
+        <div class="footer-l">
+            <img src="./images/logo_03.png" height="43" width="197" alt="">
+					<p>学成在线致力于普及中国最好的教育它与中国一流大学和机构合作提供在线课程。<br />
+© 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
+					<a href="#">下载APP</a>
+        </div>
+        <div class="footer-r">
+            <dl>
+                <dt>关于学成网</dt>
+                <dd><a href="#">关于</a></dd>
+                <dd><a href="#">管理团队</a></dd>
+                <dd><a href="#">工作机会</a></dd>
+                <dd><a href="#">客户服务</a></dd>
+                <dd><a href="#">帮助</a></dd>
+            </dl>
+            <dl>
+                <dt>关于学成网</dt>
+                <dd><a href="#">关于</a></dd>
+                <dd><a href="#">管理团队</a></dd>
+                <dd><a href="#">工作机会</a></dd>
+                <dd><a href="#">客户服务</a></dd>
+                <dd><a href="#">帮助</a></dd>
+            </dl>
+            <dl>
+                <dt>关于学成网</dt>
+                <dd><a href="#">关于</a></dd>
+                <dd><a href="#">管理团队</a></dd>
+                <dd><a href="#">工作机会</a></dd>
+                <dd><a href="#">客户服务</a></dd>
+                <dd><a href="#">帮助</a></dd>
+            </dl>
+        </div>
+    </div>
+    
 </body>
 </html>
