--- a/Web基础知识学习/02-CSS学习笔记/Codes/学成网案例/index.html
+++ b/Web基础知识学习/02-CSS学习笔记/Codes/学成网案例/index.html
@@ -198,6 +198,7 @@
             line-height: 38px;
             color: #00a4ff;
             font-weight: 700;
+            transition: all 0.8s;
         }
 
         .timetable dd a:hover {
@@ -282,10 +283,14 @@
             height: 270px;
             background-color: #fff;
             overflow: hidden;
-            box-shadow: 0 4px 5px rgba(0,0,0,0.2);
             float: left;
             margin-right: 15px;
             margin-top: 15px;
+            transition: all 0.5s;
+        }
+        .recom-bd ul li:hover {
+            margin-top: 10px;
+            box-shadow: 0 4px 5px rgba(0,0,0,0.2);
         }
         .recom-bd ul li:nth-child(5n){
             margin-right: 0;
